statum-macros-two/tests/ui/empty_state_enum.rs
extern crate statum_macros_two as statum_macros;
use statum_macros::state;

#[state]
enum EmptyState {} // âŒ No variants
